--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,13 @@
 
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-configuration2 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-configuration2</artifactId>
+            <version>2.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
