--- a/testData.properties
+++ b/testData.properties
@@ -1,4 +1,5 @@
 product.name = iPhone X
-old.price = 5.49999 Lei
-new.price = 4.89999 Lei
-discount = (- 10% )
+old.price = REDUCERE 400 LEI | PRET VECHI 5999 LEI
+new.price = 5599
+discount = - 400lei
+base.email.address=r.pintican
