--- a/testData.properties
+++ b/testData.properties
@@ -1,5 +1,5 @@
-product.name = iPhone X
-old.price = REDUCERE 400 LEI | PRET VECHI 5999 LEI
+product.name = Samsung galaxy s9
+old.price = 5999
 new.price = 5599
-discount = - 400lei
+discount = 400
 base.email.address=r.pintican
