--- a/pom.xml
+++ b/pom.xml
@@ -43,11 +43,16 @@
 
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-configuration2 -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-configuration2</artifactId>
             <version>2.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jbehave</groupId>
+            <artifactId>jbehave-core</artifactId>
+            <version>4.3.5</version>
         </dependency>
 
     </dependencies>
