--- a/testData.properties
+++ b/testData.properties
@@ -1,5 +1,4 @@
-product.name = Samsung galaxy s9
-old.price = 5999
-new.price = 5599
-discount = 400
 base.email.address=r.pintican
+name = Ruben
+password = Qwerty1
+confirm.password = Qwerty1
