--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
 
             <artifactId>junit</artifactId>
 
-            <version>RELEASE</version>
+            <version>4.12</version>
 
             <scope>compile</scope>
 
@@ -53,6 +53,12 @@
             <groupId>org.jbehave</groupId>
             <artifactId>jbehave-core</artifactId>
             <version>4.3.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.valfirst</groupId>
+            <artifactId>jbehave-junit-runner</artifactId>
+            <version>2.2.0</version>
         </dependency>
 
     </dependencies>
