Automation Test Jbehave

--- a/testData.properties
+++ b/testData.properties
@@ -1,4 +1,10 @@
 base.email.address=r.pintican
-name = Ruben
-password = Qwerty1
-confirm.password = Qwerty1
+first.name = Popescu
+last.name = Ioan
+gender = Domnul
+telephone = 0755698745
+street.address = Oltului 23
+suburb = Cluj
+city = Cluj-Napoca
+
+
