Automation Jbehave Tests

--- a/testData.properties
+++ b/testData.properties
@@ -1,10 +1,17 @@
 base.email.address=r.pintican
-first.name = Popescu
-last.name = Ioan
-gender = Domnul
-telephone = 0755698745
-street.address = Oltului 23
-suburb = Cluj
-city = Cluj-Napoca
+cel.first.name = Popescu
+cel.last.name = Ioan
+cel.gender = Domnul
+cel.telephone = 0755698745
+cel.street.address = Oltului 23
+cel.suburb = Cluj
+cel.city = Cluj-Napoca
 
+cel.email.account = ruben.pintican@yahoo.com
+cel.password.account = Cel2018!
+
+emag.email.account = ruben.pintican@yahoo.com
+emag.password.account = Emag2018!
+emag.nick.name = Ruben
+emag.mobile.phone = 0756321457
 
