Automation JBehave Emag-Cel

--- a/testData.properties
+++ b/testData.properties
@@ -1,17 +1,22 @@
 base.email.address=r.pintican
-cel.first.name = Popescu
-cel.last.name = Ioan
+cel.first.name = Giani
+cel.last.name = Jmeker
 cel.gender = Domnul
-cel.telephone = 0755698745
-cel.street.address = Oltului 23
-cel.suburb = Cluj
-cel.city = Cluj-Napoca
+cel.telephone = 5741257841
+cel.street.address = Dumbrava 23
+cel.suburb = Salaj
+cel.city = Zalau
 
 cel.email.account = ruben.pintican@yahoo.com
 cel.password.account = Cel2018!
 
+
+emag.name = Ghita
+emag.password = dinamo2018
+emag.confirm.password = dinamo2018
+emag.mobile.phone = 075421487
+emag.nick.name = Ghita21
+
 emag.email.account = ruben.pintican@yahoo.com
 emag.password.account = Emag2018!
-emag.nick.name = Ruben
-emag.mobile.phone = 0756321457
 
