Serenity Automation Test

--- a/testData.properties
+++ b/testData.properties
@@ -20,3 +20,5 @@ emag.nick.name = Ghita21
 emag.email.account = ruben.pintican@yahoo.com
 emag.password.account = Emag2018!
 
+serenity.take.screenshots = FOR_FAILURES
+
