--- a/pom.xml
+++ b/pom.xml
@@ -2,88 +2,224 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-<modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0</modelVersion>
 
-<groupId>RubenPintican</groupId>
-<artifactId>RubenPintican-Automation</artifactId>
-<version>1.0-SNAPSHOT</version>
+    <groupId>RubenPintican</groupId>
+    <artifactId>RubenPintican-Automation</artifactId>
+    <version>1.0-SNAPSHOT</version>
+
+    <properties>
+
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+        <serenity.version>1.8.0</serenity.version>
+
+        <serenity.jbehave.version>1.34.0</serenity.jbehave.version>
+
+        <webdriver.driver>firefox</webdriver.driver>
+
+    </properties>
 
 
-<dependencies>
-    <dependency>
-        <groupId>org.seleniumhq.selenium</groupId>
-        <artifactId>selenium-java</artifactId>
-        <version>3.13.0</version>
-    </dependency>
-    <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>4.12</version>
-        <scope>compile</scope>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.commons</groupId>
-        <artifactId>commons-configuration2</artifactId>
-        <version>2.0</version>
-    </dependency>
+
+    <repositories>
+
+        <repository>
+
+            <snapshots>
+
+                <enabled>false</enabled>
+
+            </snapshots>
+
+            <id>central</id>
+
+            <name>bintray</name>
+
+            <url>http://jcenter.bintray.com</url>
+
+        </repository>
+
+    </repositories>
+
+    <pluginRepositories>
+
+        <pluginRepository>
+
+            <snapshots>
+
+                <enabled>false</enabled>
+
+            </snapshots>
+
+            <id>central</id>
+
+            <name>bintray-plugins</name>
+
+            <url>http://jcenter.bintray.com</url>
+
+        </pluginRepository>
+
+    </pluginRepositories>
+
+    <dependencies>
+
         <dependency>
+
             <groupId>net.serenity-bdd</groupId>
+
             <artifactId>serenity-core</artifactId>
-            <version>2.0.0</version>
+
+            <version>${serenity.version}</version>
+
+            <scope>test</scope>
+
         </dependency>
-    <dependency>
-        <groupId>org.jbehave</groupId>
-        <artifactId>jbehave-core</artifactId>
-        <version>4.3.5</version>
-    </dependency>
-    <dependency>
-        <groupId>net.serenity-bdd</groupId>
-        <artifactId>serenity-jbehave</artifactId>
-        <version>1.44.0</version>
-    </dependency>
-</dependencies>
+
+        <dependency>
+
+            <groupId>net.serenity-bdd</groupId>
+
+            <artifactId>serenity-jbehave</artifactId>
+
+            <version>${serenity.jbehave.version}</version>
+
+            <scope>test</scope>
+
+        </dependency>
+
+        <dependency>
+
+            <groupId>org.slf4j</groupId>
+
+            <artifactId>slf4j-simple</artifactId>
+
+            <version>1.7.7</version>
+
+        </dependency>
+
+        <dependency>
+
+            <groupId>junit</groupId>
+
+            <artifactId>junit</artifactId>
+
+            <version>4.12</version>
+
+            <scope>test</scope>
+
+        </dependency>
+
+    </dependencies>
 
     <build>
+
         <plugins>
+
             <plugin>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>2.22.0</version>
-                <configuration>
-                    <includes>
-                        <include>**/story/*.java</include>
-                    </includes>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>integration-test</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
+
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.2</version>
+
+                <artifactId>maven-surefire-plugin</artifactId>
+
+                <version>2.19.1</version>
+
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+
+                    <skip>true</skip>
+
                 </configuration>
+
             </plugin>
+
             <plugin>
-                <groupId>net.serenity-bdd.maven.plugins</groupId>
-                <artifactId>serenity-maven-plugin</artifactId>
-                <version>2.0.7</version>
+
+                <artifactId>maven-failsafe-plugin</artifactId>
+
+                <version>2.19.1</version>
+
+                <configuration>
+
+                    <includes>
+
+                        <include>**/*Story.java</include>
+
+                    </includes>
+
+                    <argLine>-Xmx512m</argLine>
+
+                    <systemPropertyVariables>
+
+                        <webdriver.driver>${webdriver.driver}</webdriver.driver>
+
+                    </systemPropertyVariables>
+
+                </configuration>
+
                 <executions>
+
                     <execution>
-                        <id>serenity-reports</id>
-                        <phase>post-integration-test</phase>
+
                         <goals>
-                            <goal>test</goal>
+
+                            <goal>integration-test</goal>
+
+                            <goal>verify</goal>
+
                         </goals>
+
                     </execution>
+
                 </executions>
+
             </plugin>
+
+            <plugin>
+
+                <groupId>org.apache.maven.plugins</groupId>
+
+                <artifactId>maven-compiler-plugin</artifactId>
+
+                <version>3.2</version>
+
+                <configuration>
+
+                    <source>1.8</source>
+
+                    <target>1.8</target>
+
+                </configuration>
+
+            </plugin>
+
+            <plugin>
+
+                <groupId>net.serenity-bdd.maven.plugins</groupId>
+
+                <artifactId>serenity-maven-plugin</artifactId>
+
+                <version>${serenity.version}</version>
+
+                <executions>
+
+                    <execution>
+
+                        <id>serenity-reports</id>
+
+                        <phase>post-integration-test</phase>
+
+                        <goals>
+
+                            <goal>aggregate</goal>
+
+                        </goals>
+
+                    </execution>
+
+                </executions>
+
+            </plugin>
+
         </plugins>
     </build>
 </project>
